app/assets/stylesheets/projects/recipe.css.scss
@import "mixins/clearfix.css.scss";
@import "mixins/variables.css.scss";
@import "projects/_project_variables.css.scss";

#recipe-cards {
  width: $content_width;
  #top {
    margin-left: $first_column_width + 10px;
    padding-top: 1px;
    width: $article_column_width;
    background: white;
    .inner {
      @include cf;
      $margin: 10px;
      width: $article_column_width - $margin * 2;
      margin: 34px $margin 0;
      border-top: $common-border;
      h1 {
        font-family: $common-helvetica;
        font-weight: 700;
        font-size: 22px;
        line-height: $common-line-height;
      }
    }
  }
  #making-list {
    width: $content_width;
    #top {
      .inner {
        $margin: 10px;
        width: $article_column_width - $margin * 2;
        margin: 34px $margin 0;
        h2 {
          display: inline-block;
          vertical-align: top;
          width: 40%;
          font-family: $common-helvetica;
          font-weight: 700;
          font-size: 22px;
          line-height: $common-line-height;
        }
      }
    }
    #recipe-card-list {
      @include cf;
      width: $content_width;
      #card-order-tools {
        margin-top: -20px;
        margin-left: $first_column_width + 10px;
        width: $article_column_width;
        text-align: right;
        background: white;
        .order-change-btn {
          display: inline-block;
          margin-right: 10px;
        }
      }
      li.state-wrapper {
        width: $content_width;
        article {
          @include cf;
          .article-column {
            background: white;
            padding-top: 50px;
          }
        }
      }
      li.transition-wrapper {

      }
      .article-column.sp {
        background: white;
        margin-left: 10px + $first_column_width;
        .new-card {
          $margin: 10px;
          margin-top: 20px;
          margin-left: $margin;
          padding: 11px 0 11px 0;
          width: $article_column_width - $margin * 2;
          background-color: $common-basic-color;
          font-family: $common-verdana;
          font-size: 14px;
          line-height: $common-line-height;
          text-align: center;
          color: white;
        }
      }

    }
  }
}

#recipe-card-list {
  width: 100%;
  > li {
    width: 100%;
    float: left;
  }
  figure {
    float: left;
    margin-right: 24px;
    overflow: hidden;
    img {
      height: 200px;
    }
  }
  .card-content {
    $margin: 10px;
    float: left;
    margin-left: $margin;
    margin-bottom: 8px;
    padding-bottom: 0;
    width: $article_column_width - $margin * 2;
    border: none;
    h2.title {
      font-family: $common-sans-serif;
      font-weight: 700;
      font-size: 14px;
      line-height: $common-line-height;
    }
    .description {
      float: left;
      font-family: $common-sans-serif;
      font-size: 14px;
      line-height: 24px;
    }
    .attachments {
      @include cf;
      float: left;
    }
  }

  .transition-wrapper {
    margin-left: $first_column_width + 10px;
    margin-bottom: 0px;
    padding-top: 0px;
    width: $article_column_width;
    background: white;
    border: none;
    .transition-content {
      float: left;
      width: 100%;
      .transition-footer {
        text-align: right;
        width: 780px;
        margin-left: 80px;
        .new-card {
          background-color: $common-basic-color;
          $margin: 10px;
          margin-top: 20px;
          padding: 11px 0 11px 0;
          width: 780px;
          font-family: $common-verdana;
          font-size: 14px;
          line-height: $common-line-height;
          text-align: center;
          color: white;
        }
        .delete-transition {
          display: none;
        }
      }
    }
    figure {
      margin: 0;
      padding-right: 24px;
      box-sizing: border-box;
    }
    .annotation-list {
      float: left;
      width: 780px;
      margin-left: 80px;
      >li {
        width: 100%;
        overflow: auto;
        padding: 14px 0;
        margin-bottom: 12px;
      }
      h2 {
        font-size: 20px;
        font-weight: normal;
        margin-bottom: 4px;
      }
    }
    .card-content {
      $margin: 10px;
      float: left;
      margin-left: 0;
      margin-bottom: 8px;
      padding-bottom: 0;
      width: 780px;
      border: none;
      h2.title {
        font-family: $common-sans-serif;
        font-weight: 700;
        font-size: 14px;
        line-height: $common-line-height;
      }
      .description {
        float: left;
        font-family: $common-sans-serif;
        font-size: 14px;
        line-height: 24px;
      }
      .attachments {
        @include cf;
        float: left;
      }
    }
    footer {
      width: 100%;
      float: left;
    }
  }

  .order-up-btn {
    display: none;
  }
  .order-down-btn {
    display: none;
  }
  .order-commit-btn {
    display: none;
  }
}

.edit_recipe {
  display: none;
}

#recipe-card-list.order-changing {
  .order-up-btn {
    display: inline-block;
  }
  .order-down-btn {
    display: inline-block;
  }
  .order-change-btn {
    display: none;
  }
  .order-commit-btn {
    display: inline-block;
  }
}

#material-list, #tool-list, #blueprint-list {
  border-top: $common-border;
  padding-top: 5px;
  margin-bottom: 20px;
  h2 {
    line-height: 30px;
    width: 40%;
    font-size: 20px;
    display: inline-block;
    vertical-align: top;
  }
  ul {
    width: 60%;
    display: inline-block;
    > li {
      list-style-type: decimal;
      line-height: 30px;
      width: 50%;
      float: left;
      a {
        cursor: pointer;
      }
    }
    @include cf;
  }
}

